--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "homepage": "https://github.com/steamerjs/steamer-plugin-mock/#readme",
   "dependencies": {
     "chalk": "^1.1.3",
+    "faker": "^4.1.0",
+    "json-server": "^0.11.2",
     "steamer-pluginutils": "^1.2.6"
   },
   "devDependencies": {
@@ -33,6 +35,7 @@
     "expect.js": "^0.3.1",
     "gulp": "gulpjs/gulp#4.0",
     "istanbul": "^0.4.5",
+    "json-server": "^0.11.2",
     "mocha": "^3.2.0",
     "mocha-lcov-reporter": "^1.3.0",
     "sinon": "^2.1.0"
