--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "steamer-plugin-mock",
-  "version": "0.0.1",
+  "version": "2.0.0",
   "description": "steamer-plugin-mock",
   "main": "index.js",
   "bin": "index.js",
   "scripts": {
     "lint": "eslint index.js",
-    "test": "npm run lint && mocha ./test/test.js",
-    "cover": "istanbul cover --hook-run-in-context node_modules/mocha/bin/_mocha ./test/test.js --compilers js:babel-core/register  --bail --sort --reporter dot",
+    "test": "npm run lint && mocha",
+    "cover": "istanbul cover _mocha",
     "travis": "npm run cover -- --report lcovonly"
   },
   "repository": {
@@ -24,19 +24,25 @@
   },
   "homepage": "https://github.com/steamerjs/steamer-plugin-mock/#readme",
   "dependencies": {
-    "chalk": "^2.0.1",
-    "json-server": "^0.11.2",
-    "steamer-pluginutils": "^1.2.6"
+    "chalk": "^2.3.0",
+    "steamer-plugin": "^1.0.0"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
     "codecov.io": "^0.1.6",
-    "coveralls": "^2.13.0",
+    "coveralls": "^3.0.0",
+    "eslint-config-alloy": "^1.2.1",
     "expect.js": "^0.3.1",
-    "gulp": "gulpjs/gulp#4.0",
     "istanbul": "^0.4.5",
-    "json-server": "^0.11.2",
-    "mocha": "^3.2.0",
+    "json-server": "^0.12.0",
+    "mocha": "^4.0.1",
     "mocha-lcov-reporter": "^1.3.0",
-    "sinon": "^2.1.0"
+    "sinon": "^4.0.1"
+  },
+  "engines": {
+    "node": ">=6.4.0"
+  },
+  "peerDependencies": {
+    "steamerjs": "^2.0.0"
   }
 }
