--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "steamer-plugin-mock",
-  "version": "2.0.0",
-  "description": "steamer-plugin-mock",
+  "version": "2.0.1",
+  "description": "mock data for your project",
   "main": "index.js",
   "bin": "index.js",
   "scripts": {
@@ -25,19 +25,19 @@
   "homepage": "https://github.com/steamerjs/steamer-plugin-mock/#readme",
   "dependencies": {
     "chalk": "^2.3.0",
-    "steamer-plugin": "^1.0.0"
+    "json-server": "^0.12.1",
+    "steamer-plugin": "^1.0.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "codecov.io": "^0.1.6",
     "coveralls": "^3.0.0",
-    "eslint-config-alloy": "^1.2.1",
+    "eslint-config-alloy": "^1.3.1",
     "expect.js": "^0.3.1",
     "istanbul": "^0.4.5",
-    "json-server": "^0.12.0",
     "mocha": "^4.0.1",
     "mocha-lcov-reporter": "^1.3.0",
-    "sinon": "^4.0.1"
+    "sinon": "^4.1.2"
   },
   "engines": {
     "node": ">=6.4.0"
