--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "steamer-plugin-mock",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "mock data for your project",
   "main": "index.js",
   "bin": "index.js",
@@ -24,20 +24,22 @@
   },
   "homepage": "https://github.com/steamerjs/steamer-plugin-mock/#readme",
   "dependencies": {
-    "chalk": "^2.3.0",
-    "json-server": "^0.12.1",
-    "steamer-plugin": "^1.0.1"
+    "chalk": "^2.4.1",
+    "json-server": "^0.12.2",
+    "steamer-plugin": "^1.0.3"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.3",
     "chai": "^4.1.2",
     "codecov.io": "^0.1.6",
-    "coveralls": "^3.0.0",
-    "eslint-config-alloy": "^1.3.1",
+    "coveralls": "^3.0.1",
+    "eslint": "^4.19.1",
+    "eslint-config-alloy": "^1.4.2",
     "expect.js": "^0.3.1",
     "istanbul": "^0.4.5",
-    "mocha": "^4.0.1",
+    "mocha": "^5.1.1",
     "mocha-lcov-reporter": "^1.3.0",
-    "sinon": "^4.1.2"
+    "sinon": "^5.0.3"
   },
   "engines": {
     "node": ">=6.4.0"
